[project]
name = "cs305gxx"
version = "0.1.0"
description = "SUSTech CS305 Fall 2025 Group XX Project Starter"
dependencies = [
    # You CANNOT use unapproved external libraries except matplotlib in `src/` 
    "matplotlib",

    # If there are indeed new packages that need to be introduced for test, TA will update.
    "pytest",
    "networkx",
]
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12"

[tool.pytest.ini_options]
# addopts = "-s" # -s: disable output capturing direct, stdout will back to terminal
log_cli = false # log cli for pytest
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
